forecast days update
included a current day container in the forecast slide when the user selcts another day

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -146,6 +146,19 @@
       <div class="weekly-forecast-section">
         <div class="swiper-container">
           <div class="swiper-wrapper">
+            <div class="swiper-slide forecast-current">
+              <div class="forecast-container day-0">
+                0
+                <div class="forecast-container-day">
+                  <h6 class="forecast-day-0 day day">-</h6>
+                </div>
+                <div class="forecast-container-icon day0-icon"></div>
+                <div class="forecast-container-degree">
+                  <span class="day0-degree">?°C</span>
+                </div>
+              </div>
+            </div>
+
             <div class="swiper-slide">
               <div class="forecast-container day-1">
                 1
