--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -146,7 +146,7 @@
       <div class="weekly-forecast-section">
         <div class="swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide forecast-current">
+            <div id="forecast-current" class="swiper-slide">
               <div class="forecast-container day-0">
                 0
                 <div class="forecast-container-day">
