--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -134,21 +134,21 @@
         <span class="slider round"></span>
       </label>
       <div class="timezone-section">
-        <div>
-          <h4 class="timezone">Cntinent/Country</h4>
-          <h6>Today's weather</h6>
-        </div>
         <div class="search_wrap search_wrap_3">
           <form class="search_box">
             <input
               type="text"
               class="input search-city"
-              placeholder="search by city name..."
+              placeholder=".....  search by city name..."
             />
             <button type="submit" value="Submit" class="btn btn_common">
               <i class="fas fa-search"></i>
             </button>
           </form>
+        </div>
+        <div>
+          <h4 class="timezone">Cntinent/Country</h4>
+          <h6>Today's weather</h6>
         </div>
       </div>
       <div class="weekly-forecast-section">
@@ -301,7 +301,9 @@
           </div>
         </div>
       </div>
+      <button class="other-into-btn">more info</button>
     </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
